--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <button id="create">Create room!</button>
+  <input type="text" placeholder="this will be transferred!" id="input">
   <script src="/socket.io/socket.io.js"></script>
   <script src="js/main.js"></script>
 </body>
