Added hello world react

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,11 @@
 <body>
   <button id="create">Create room!</button>
   <input type="text" placeholder="this will be transferred!" id="input">
+  <div id="chat"></div>
+
   <script src="/socket.io/socket.io.js"></script>
+  <script src="https://fb.me/react-0.14.0.js"></script>
+  <script src="https://fb.me/react-dom-0.14.0.js"></script>
   <script src="js/main.js"></script>
 </body>
 
