Added basic react components

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-  <button id="create">Create room!</button>
-  <input type="text" placeholder="this will be transferred!" id="input">
-  <div id="chat"></div>
+  <div id="index"></div>
+  <div id="workspace"></div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://fb.me/react-0.14.0.js"></script>
   <script src="https://fb.me/react-dom-0.14.0.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
+  <script type="text/babel" src="js/workspace.jsx"></script>
+  <script type="text/babel" src="js/index.jsx"></script>
   <script src="js/main.js"></script>
 </body>
 
