--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
   <script src="https://fb.me/react-0.14.0.js"></script>
   <script src="https://fb.me/react-dom-0.14.0.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.min.js"></script>
   <script type="text/babel" src="js/chat.jsx"></script>
+  <script type="text/babel" src="js/ace.jsx"></script>
   <script type="text/babel" src="js/workspace.jsx"></script>
   <script type="text/babel" src="js/index.jsx"></script>
   <script src="js/main.js"></script>
