--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>CalHacks</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/chat.css">
+  <link rel="stylesheet" href="css/ace.css">
 </head>
 
 <body>
-  <div id="index"></div>
-  <div id="workspace"></div>
+  <div id="Workspace"></div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://fb.me/react-0.14.0.js"></script>
