--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="Workspace"></div>
+  <div id="main"></div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://fb.me/react-0.14.0.js"></script>
