--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/chat.css">
   <link rel="stylesheet" href="css/ace.css">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,300|Roboto+Mono:400,700'>
 </head>
 
 <body>
