Fixed ace editor's dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,7 @@
   <script src="https://fb.me/react-0.14.0.js"></script>
   <script src="https://fb.me/react-dom-0.14.0.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
-  <script src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/mode-javascript.js"></script>
+  <script src="ace/src-min-noconflict/ace.js"></script>
   <script src="js/config.js"></script>
   <script type="text/babel" src="js/chat.jsx"></script>
   <script type="text/babel" src="js/ace.jsx"></script>
