Fixed flex-box and styling in home and chat

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div id="main"></div>
+  <div id="render"></div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://fb.me/react-0.14.0.js"></script>
@@ -26,6 +26,7 @@
   <script type="text/babel" src="js/workspace.jsx"></script>
   <script type="text/babel" src="js/index.jsx"></script>
   <script src="js/main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
 </body>
 
 </html>
